test/sema/call.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
fn foo() -> void {
}

fn bar(x: i32, y: i32) -> void {
}

fn main() -> void {
    let x: i32 = 1;

    // CHECK: [[# @LINE + 1 ]]:6: error: calling non-function symbol
    x();

    // CHECK: [[# @LINE + 1 ]]:5: error: symbol 'y' not found
    y();

    // CHECK: [[# @LINE + 1 ]]:6: error: calling non-function symbol
    0();

    // CHECK: [[# @LINE + 1 ]]:8: error: argument count mismatch in function call, expected 0 actual 1
    foo(x);

    // CHECK: [[# @LINE + 1 ]]:12: error: unexpected type of argument 'void' expected 'i32'
    bar(foo(), foo());

    // CHECK: [[# @LINE + 1 ]]:15: error: unexpected type of argument 'void' expected 'i32'
    bar(1, foo());

    // CHECK: [[# @LINE + 1 ]]:8: error: argument count mismatch in function call, expected 2 actual 0
    bar();

    // CHECK: [[# @LINE + 1 ]]:8: error: argument count mismatch in function call, expected 2 actual 3
    bar(1, 2, 3);

    bar(1, 2);
    foo();
}

// CHECK-NOT: {{.*}}